<resources>
    <string name="kakao_app_key">9fb100514ad7b1d7b7f626d1b7bbeb5d</string>
    <string name="clientId">rmo4LJLrDkhDjVzj9eTW</string>
    <string name="clientSecret">nJ5MQ7k7AQ</string>
    <string name="clientName">bigwalk</string>
    <string name="facebook_app_id">1089407798072893</string>
    <string name="fb_login_protocol_scheme">fb1089407798072893</string>
    <string-array name="main_dawn">
        <item>단 한 걸음으로\n세상을 바꿀 수 있어요.</item>
        <item>쉬었다 걸어도 돼요.</item>
        <item>걸은 만큼 누군가를\n도울 수 있어요.</item>
        <item>걸음이 기부가 된다니,\n상상이 되나요?</item>
        <item>건조한 너의 걸음에\n텐션을!...\u2605</item>
        <item>아무도 없을 때\n혼자 걷는 느낌 알죠.</item>
    </string-array>
    <string-array name="main_morning">
        <item>나는 오늘도\n세상을 바꾼다!</item>
        <item>오늘의 걸음여행 시작!</item>
        <item>오늘은\n어디로 가시나요?</item>
        <item>도시 탐험가의 기부법</item>
        <item>걸음한잔의 여유,\n빅워크</item>
        <item>빛나는 아침을 위한\n빅워크!</item>
        <item>걸음으로 세상을\n변화시키고 있어요!</item>
    </string-array>
    <string-array name="main_after_noon">
        <item>기부마저 완벽한\n빅워커</item>
        <item>나만 알고 싶은\n기부필살기</item>
        <item>내가 걷는 곳 어디든지\n기부핫스팟!</item>
        <item>오늘, 하늘을\n본 적이 있나요?</item>
        <item>가장 당신 다운\n걸음이었어요.</item>
        <item>소중한 내 친구,\n오늘 하루 고마웠어요</item>
    </string-array>
    <string-array name="main_evening">
        <item>걸음은 경쾌하게,\n기부는 즐겁게</item>
        <item>걷다보니 기부한 썰</item>
        <item>저녁에 딱 어울리는\n런 라이프!</item>
        <item>별과 함께 만드는\n빛나는 마음</item>
        <item>오늘 하루의 걸음은\n어땠나요?</item>
        <item>오늘 하루도\n고생했어요</item>
    </string-array>
    <string name="terms_agreement">약관동의</string>
    <string name="agree_with_all_terms">전체동의</string>
    <string name="terms_of_service">서비스 이용약관(필수)</string>
    <string name="terms_of_privacy">개인정보 취급 방침(필수)</string>
    <string name="terms_of_enterprise_privacy">개인정보처리방침 및 동의 (필수)</string>
    <string name="terms_of_over_14">만 14세 이상입니다(필수)</string>
    <string name="terms_of_marketing">마케팅 제3자 이용동의(선택)</string>
    <string name="next_page">다음</string>
    <string name="withdraw_submit">탈퇴신청</string>
    <string name="privacy">개인정보</string>
    <string name="privacy_modify">개인정보 수정</string>
    <string name="change_photo">사진 변경</string>
    <string name="are_you_a_corporate_member"><u>기업회원이신가요?</u></string>
    <string name="are_you_a_corporate_member2"><u>기업회원으로 전환하시겠습니까?</u></string>
    <string name="confirm">확인</string>
    <string name="please_select_corporate">회사를 선택해주세요</string>
    <string name="please_select_department">부서를 선택해주세요</string>
    <string name="please_input_email">이메일을 입력해주세요</string>
    <string name="please_input_employee_number">사원번호를 입력해주세요</string>
    <string name="please_input_employee_email">이메일을 입력해주세요</string>
    <string name="please_input_family">가족관계를 입력해주세요</string>
    <string name="please_input_age">나이를 입력해주세요</string>
    <string name="please_input_employee_nickname">닉네임을 입력해주세요</string>
    <string name="please_input_employee_id">아이디를 입력해주세요</string>
    <string name="please_input_name">이름을 입력해주세요</string>
    <string name="please_input_insta_account">인스타그램 계정을 입력해주세요</string>
    <string name="please_input_input_value">추천인 이름을 입력해주세요</string>
    <string name="please_input_address">주소를 입력해주세요</string>
    <string name="please_input_join_number">출석번호를 입력해주세요</string>
    <string name="please_input_student_id">학번을 입력해주세요</string>
    <string name="please_input_search_value">검색 항목을 입력해주세요</string>
    <string name="please_input_visit_date">생년월일을 입력해주세요</string>
    <string name="please_input_number">전화번호를 입력해주세요</string>
    <string name="please_input_employee_auth_num">인증번호를 입력해주세요</string>
    <string name="organization_selection">기업선택</string>
    <string name="department_selection">부서선택</string>
    <string name="search_keyword_selection">검색어선택</string>
    <string name="please_input_nickname">닉네임을 입력해주세요</string>
    <string name="bottom_walk">걷기</string>
    <string name="bottom_campaign">캠페인</string>
    <string name="bottom_story">포스트</string>
    <string name="bottom_my_page">마이페이지</string>
    <string name="hi_there">Hi there,</string>
    <string name="im_bigwalk">I\'m bigwalk!</string>
    <string name="you_can_already_donate_this_much">벌써 이만큼이나\n기부할 수 있어요!</string>
    <string name="goal_step">목표걸음</string>
    <string name="achievement_rate">달성</string>
    <string name="today_step">오늘 걸음 수</string>
    <string name="today_step_title">오늘 걸음</string>
    <string name="donated_steps">걸음 기부</string>
    <string name="ranked_order">위</string>
    <string name="step">걸음</string>
    <string name="step10000">만 걸음</string>
    <string name="period_of_campaign">캠페인 기간 :</string>
    <string name="period_of_campaign_without_colon">캠페인 기간</string>
    <string name="donated_step">기부된 걸음</string>
    <string name="donate_step">기부한 걸음 수</string>
    <string name="go_to_story">포스트 구경가기</string>
    <string name="donating_steps">걸음 기부하기</string>
    <string name="please_select_the_number_of_donation_steps">기부 걸음을\n선택해주세요!</string>
    <string name="number_of_steps_to_donate">기부할 걸음 수</string>
    <string name="i_will_donate_all_my_steps">걸음 몽땅 기부할래요!</string>
    <string name="thank_you_for_sharing_your_precious_steps">소중한 걸음을\n나눠줘서 고마워요!</string>
    <string name="check_ranking">랭킹 확인하기</string>
    <string name="terms_of_service_url">http://www.bigwalk.co.kr/terms-of-service/</string>
    <string name="terms_of_privacy_url">http://www.bigwalk.co.kr/privacy-policy/</string>
    <string name="terms_of_marketing_url">http://www.bigwalk.co.kr/agreement-marketing/</string>
    <string name="terms_of_feed_url">https://bigwalk.notion.site/f3c8098c35924e4bac9e6c039e03a083</string>
    <string name="inquiry_google_form_url">https://docs.google.com/forms/d/e/1FAIpQLSejBj4g0-JzayaCAlIJnobJkcSYGQo5RxAqmDDHI1aMKvCriQ/viewform</string>
    <string name="frequent_questions_url">https://www.notion.so/bigwalk/71607c210e1746278da0fcd72475b602?v=52a3d79193aa405bb6dfd5ab149d70fc</string>
    <string name="apply_for_campaign_opening_url">https://bigwalk.co.kr/contact</string>
    <string name="abusing_policy_url">https://bit.ly/bigwalk_ranking_rule</string>
    <string name="goal_set_info_url">https://bigwalk.notion.site/802abddab02c41bdabb6646dcb2dc430</string>
    <string name="apply_content_url">https://docs.google.com/forms/d/1zGadZXz_iHPS0s__M-9rdwTfet7uryKxvyyfy607-tw/edit</string>
    <string name="exit">종료</string>
    <string name="donation_completion_trophy">기부 완료 트로피</string>
    <string name="campaign_thumbnail_image">캠페인 썸네일 이미지</string>
    <string name="campaign_profile">캠페인 프로필</string>
    <string name="sign_in_image">가입 이미지</string>
    <string name="nickname">닉네임</string>
    <string name="birthday">생년월일</string>
    <string name="account_information">계정 정보</string>
    <string name="available_nickname">사용 가능한 닉네임</string>
    <string name="disavailable_nickname">사용 불가능한 닉네임</string>
    <string name="kakao_start">카카오로 시작하기</string>
    <string name="naver_start">네이버로 시작하기</string>
    <string name="facebook_start">페이스북으로 시작하기</string>
    <string name="joined_campaign">참여한 캠페인</string>
    <string name="joined_funding">참여한 펀딩</string>
    <string name="report">리포트</string>
    <string name="customer">고객센터</string>
    <string name="app_setting">APP 설정</string>
    <string name="terms">약관확인</string>
    <string name="save_photo">사진으로 저장</string>
    <string name="copy_link">링크 복사</string>
    <string name="copy_complete">복사 완료</string>
    <string name="donation_rank">기부 순위</string>
    <string name="kakao_login">kakao login</string>
    <string name="arrow_right">arrow right</string>
    <string name="naver_login_image">naver login image</string>
    <string name="facebook_login_image">facebook login image</string>
    <string name="back_image">back image</string>
    <string name="back_profile">back profile</string>
    <string name="profile_image">profile image</string>
    <string name="edit_profile_image">edit profile image</string>
    <string name="agreement_back_image">agreement back image</string>
    <string name="agreement_all_image">agreement all image</string>
    <string name="agreement_service_image">agreement service image</string>
    <string name="agreement_privacy_image">agreement privacy image</string>
    <string name="agreement_over_14_age_image">agreement over 14 age image</string>
    <string name="agree_with_marketing">agree with marketing</string>
    <string name="character_animation">character_animation</string>
    <string name="profile_go_home">profile_go_home</string>
    <string name="go_home">홈으로</string>
    <string name="profile_go_campaign">profile_go_campaign</string>
    <string name="profile_go_share">profile_go_share</string>
    <string name="share">공유하기</string>
    <string name="divider">divider</string>
    <string name="to_share_donation_result">기부 결과 공유하기</string>
    <string name="recently_participated_campaign">최근 참여한 캠페인</string>
    <string name="recently_mission">최근 챌린지</string>
    <string name="on_going_challenge">진행 중 챌린지</string>
    <string name="participated_challenge">참여한 챌린지</string>
    <string name="ended_challenge">종료된 챌린지</string>
    <string name="public_type">공개형</string>
    <string name="business_type">기업형</string>
    <string name="no_on_going_challenge">챌린지 준비중입니다.</string>
    <string name="no_participated_challenge">아직 참여한 챌린지가 없습니다.\n진행 중인 챌린지를 확인해보세요!</string>
    <string name="no_ended_challenge">종료된 챌린지가 없습니다.</string>
    <string name="user_average_participate">유저 평균 참여</string>
    <string name="my_average_participate">내 참여</string>
    <string name="like_count">내가 받은 좋아요</string>
    <string name="popular_post">인기</string>
    <string name="recent_post">최근</string>
    <string name="my_post">내 게시물</string>
    <string name="move_to_recently_participated_campaign_view">최근 참여한 캠페인으로 이동</string>
    <string name="return_to_the_walk_view">걷기 화면으로 되돌아감</string>
    <string name="move_to_donation_report_view">기부 리포트 화면으로 이동</string>
    <string name="thumbnails_of_recent_campaigns">최근 참여한 캠페인의 썸네일</string>
    <string name="donate_all_steps">걸음 전부 기부하기</string>
    <string name="ranking_profile">ranking profile</string>
    <string name="move_to_walk_report_view">move to walk report view</string>
    <string name="menu_button">menu_button</string>
    <string name="in_a_single_step_you_can_change_the_world">단 한 걸음으로\n세상을 바꿀 수 있어요.</string>
    <string name="kcal_icon">kcal_icon</string>
    <string name="zero">0</string>
    <string name="_0kcal">0kcal</string>
    <string name="donate_icon">donate_icon</string>
    <string name="share_icon">share_icon</string>
    <string name="donable_steps">기부 가능한 걸음</string>
    <string name="_0">0</string>
    <string name="walk_step_icon">walk_step_icon</string>
    <string name="maximum_10000">최대 10,000</string>
    <string name="walk_moving_character">walk_moving_character</string>
    <string name="walk_bubble">walk_bubble</string>
    <string name="today_walk">오늘 걸음</string>
    <string name="campaign_home_button">campaign_home_button</string>
    <string name="campaign_menu_button">campaign_menu_button</string>
    <string name="campaign">캠페인</string>
    <string name="feed">챌린지</string>
    <string name="story">포스트</string>
    <string name="select_campaign">캠페인 선택</string>
    <string name="item_recent_campaign_participate_check">item_recent_campaign_participate_check</string>
    <string name="total_donation_walk">총 기부한 걸음</string>
    <string name="bigwalk">bigwalk</string>
    <string name="post">포스트</string>
    <string name="withdraw_title">회원탈퇴신청</string>
    <string name="withdraw_message">회원탈퇴를 하시면 즉시 탈퇴 처리됩니다.</string>
    <string name="withdraw_later">다음에 하기</string>
    <string name="withdraw_user_info">가입정보</string>
    <string name="withdraw_user_social">가입 소셜</string>
    <string name="withdraw_notice_service">*회원 탈퇴 후 바로 서비스 재가입이 가능합니다.</string>
    <string name="withdraw_notice_nickname">*사용한 닉네임은 중복 사용할 수 없습니다.</string>
</resources>