<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="kr.co.bigwalk.app.my_page.withdraw.WithdrawModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/recent_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/return_to_the_walk_view"
            android:onClick="@{() -> viewModel.finishActivity()}"
            android:padding="16dp"
            android:src="@drawable/ico_24_exit"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/withdraw_title"
            style="@style/NanumSquareEb20spBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/withdraw_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/withdraw_profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="55.5dp"
            android:contentDescription="@string/edit_profile_image"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/withdraw_title"
            app:loadImage="@{viewModel.profile.profilePath}" />

        <TextView
            android:id="@+id/withdraw_goodbye"
            style="@style/NanumSquareB20MainFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="7dp"
            android:text="@{viewModel.profile.withdrawGoodbyeString}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/withdraw_profile_image" />

        <TextView
            android:id="@+id/withdraw_message"
            style="@style/NanumSquareRBlack14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18.5dp"
            android:gravity="center_horizontal"
            android:text="@string/withdraw_message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/withdraw_goodbye" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="83dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/withdraw_message">

            <TextView
                android:id="@+id/user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/withdraw_user_info"
                style="@style/NanumSquareRBlack12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="8dp"
                android:background="@color/black" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="14.5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/NanumSquareB14MainFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/nickname" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/NanumSquareRBlack14sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@{viewModel.profile.name}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/NanumSquareB14MainFont"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/withdraw_user_social" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/NanumSquareRBlack14sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@{viewModel.profile.userProvider.serviceProvider}" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="11dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/account_information"
                    style="@style/NanumSquareB14MainFont" />

                <TextView
                    android:id="@+id/textView8"
                    style="@style/NanumSquareRBlack14sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:text="@{viewModel.profile.email}" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="14.5dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22.5dp"
                android:text="@string/withdraw_notice_service"
                style="@style/NanumSquareRBlack12sp" />

            <TextView
                android:id="@+id/textView10"
                style="@style/NanumSquareRBlack12sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/withdraw_notice_nickname" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/white_button_border"
                android:padding="0.5dp">

                <TextView
                    android:id="@+id/textView"
                    style="@style/NanumSquareRBlack14sp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center_vertical"
                    android:text="@string/withdraw_later"
                    android:textAlignment="center"
                    tools:layout_editor_absoluteX="1dp"
                    android:onClick="@{() -> viewModel.finishActivity()}" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/submit_withdraw"
                style="@style/NanumSquareRoundRWhite20sp28heightAndBackground"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center_vertical"
                android:onClick="@{() -> viewModel.withdrawUser()}"
                android:text="@string/withdraw_submit"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>