<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="kr.co.bigwalk.app.campaign.CampaignViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/campaign_home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/campaign_home_button"
            android:onClick="@{()->viewModel.moveToHome()}"
            android:padding="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/aos_icon_20_home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/campaign_tab"
            style="@style/tabTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/campaign_home_button"
            app:layout_constraintBottom_toBottomOf="@+id/campaign_home_button"
            app:tabMode="scrollable"
            app:tabTextAppearance="@style/tabTextAppearence">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/campaign" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/post" />

        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/campaign_list_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/campaign_tab" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>